--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body >
     <div class="one">
-        <img class="image" src="images/image-qr-code.png" alt="image-qr-code" >
+        <img class="image" src="https://github.com/Avni-gr/QR-Code-for-Front-end-mentor/blob/main/image-qr-code.png?raw=true" alt="image-qr-code" >
         <h1>Improve your front-end skills by building projects</h1> 
         <p>Scan the Qr code to visit the Front-end Mentor and take your coding skills to the next level</p>  
     </div>
